[package]
name = "futures_codec"
edition = "2018"
version = "0.4.0"
authors = ["Matt Hunzinger <matthunz2@gmail.com>"]
description = "Utilities for encoding and decoding frames using `async/await`"
license = "MIT"
readme = "README.md"
repository = "https://github.com/matthunz/futures-codec"
homepage = "https://github.com/matthunz/futures-codec"
documentation = "https://docs.rs/crate/futures_codec"
keywords = ["future", "futures", "async", "codec"]
categories = ["asynchronous", "network-programming"]

[features]
default = []
json = [ "serde", "serde_json" ]
cbor = [ "serde", "serde_cbor" ]

[dependencies]
bytes = "0.5.2"
futures = "0.3.1"
memchr = "2.2.1"
pin-project = "0.4.6"

[dependencies.serde]
version = '1.0.103'
optional = true
features = [ "serde_derive" ]

[dependencies.serde_json]
version = '1.0.42'
optional = true

[dependencies.serde_cbor]
version = '0.10.2'
optional = true

[package.metadata.docs.rs]
all-features = true
