[package]
name = "futures_codec"
edition = "2018"
version = "0.4.1"
authors = ["Matt Hunzinger <matthunz2@gmail.com>"]
description = "Utilities for encoding and decoding frames using `async/await`"
license = "MIT"
readme = "README.md"
repository = "https://github.com/matthunz/futures-codec"
homepage = "https://github.com/matthunz/futures-codec"
documentation = "https://docs.rs/crate/futures_codec"
keywords = ["future", "futures", "async", "codec"]
categories = ["asynchronous", "network-programming"]

[features]
default = []
json = [ "serde", "serde_json" ]
cbor = [ "serde", "serde_cbor" ]

[dependencies]
bytes = "0.5.4"
futures = "0.3.5"
memchr = "2.2.3"
pin-project = "0.4.22"

[dependencies.serde]
version = '1.0.113'
optional = true
features = [ "derive" ]

[dependencies.serde_json]
version = '1.0.55'
optional = true

[dependencies.serde_cbor]
version = '0.11.1'
optional = true

[package.metadata.docs.rs]
all-features = true
