[package]
name = "futures_codec"
edition = "2018"
version = "0.4.1"
authors = ["Matt Hunzinger <matthunz2@gmail.com>"]
description = "Utilities for encoding and decoding frames using `async/await`"
license = "MIT"
readme = "README.md"
repository = "https://github.com/matthunz/futures-codec"
homepage = "https://github.com/matthunz/futures-codec"
documentation = "https://docs.rs/crate/futures_codec"
keywords = ["future", "futures", "async", "codec"]
categories = ["asynchronous", "network-programming"]

[features]
default = ["async"]
async = ["futures-sink", "futures-util"]
blocking = []
json = ["serde", "serde_json"]
cbor = ["serde", "serde_cbor"]

[dependencies]
bytes = "0.6"
memchr = "2.3"
pin-project-lite = "0.2"

[dependencies.futures-sink]
version = "0.3"
optional = true

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["io"]
optional = true

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.serde_cbor]
version = "0.11"
optional = true

[dev-dependencies]
futures = "0.3.7"

[package.metadata.docs.rs]
all-features = true
